_build/html/reports/Exercise1.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 1107, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.9/3.9.0_5/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 852, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Part 1 Î”Î·Î¼Î¹Î¿Ï…ÏÎ³Î®ÏƒÏ„Îµ Ï„Î¿ ÏƒÎ®Î¼Î±
Fs=1000                    # ÏƒÏ…Ï‡Î½ÏŒÏ„Î·Ï„Î± Î´ÎµÎ¹Î³Î¼Î±Ï„Î¿Î»Î·ÏˆÎ¯Î±Ï‚ 1000 Hz
Ts=#ÏƒÏ…Î¼Ï€Î»Î·ÏÏÏƒÏ„Îµ#           # Ï€ÎµÏÎ¯Î¿Î´Î¿Ï‚ Î´ÎµÎ¹Î³Î¼Î±Ï„Î¿Î»Î·ÏˆÎ¯Î±Ï‚
L=1000                     # Î¼Î®ÎºÎ¿Ï‚ ÏƒÎ®Î¼Î±Ï„Î¿Ï‚ (Î±ÏÎ¹Î¸Î¼ÏŒÏ‚ Î´ÎµÎ¹Î³Î¼Î¬Ï„Ï‰Î½)
T=L*Ts                     # Î´Î¹Î¬ÏÎºÎµÎ¹Î± ÏƒÎ®Î¼Î±Ï„Î¿Ï‚
t=np.arange(0,(L-1)*Ts,Ts) # Ï‡ÏÎ¿Î½Î¹ÎºÎ­Ï‚ ÏƒÏ„Î¹Î³Î¼Î­Ï‚ Ï…Ï€Î¿Î»Î¿Î³Î¹ÏƒÎ¼Î¿Ï Ï„Î¿Ï… ÏƒÎ®Î¼Î±Ï„Î¿Ï‚
        
x=np.sin(2*np.pi*30*t) \
+ 0.8*np.sin(2*np.pi*80*(t-2)) \
+ np.sin(2*np.pi*60*t);                # ÏƒÏ…Î½Î¹ÏƒÏ„ÏÏƒÎ± 60 Hz
    

# Î£Ï‡ÎµÎ´Î¹Î¬ÏƒÏ„Îµ Ï„Î¿ ÏƒÎ®Î¼Î± ÏƒÏ„Î¿ Ï€ÎµÎ´Î¯Î¿ Ï„Î¿Ï… Ï‡ÏÏŒÎ½Î¿Ï…

fig, ax = plt.subplots()
fig.set_size_inches(18.5, 10.5)
ax.plot(t,x)
ax.set(xlabel='t (sec)', ylabel='Amplitude',
       title='Time domain plot of x')
ax.grid()
ax.axis([0, 0.2, -2.5, 2.5])
plt.show()

# Î¥Ï€Î¿Î»Î¿Î³Î¯ÏƒÏ„Îµ Ï„Î¿Î½ Î´Î¹Î±ÎºÏÎ¹Ï„ÏŒ Î¼ÎµÏ„Î±ÏƒÏ‡Î·Î¼Î±Ï„Î¹ÏƒÎ¼ÏŒ Fourier

def nextpow2(i):  # ÎµÏ€Î¹ÏƒÏ„ÏÎ­Ï†ÎµÎ¹ Ï„Î¿ n, Ï„Î­Ï„Î¿Î¹Î¿ ÏÏƒÏ„Îµ 2^n >= L
    n=0
    while 2**n < i:
        n+=1
    return n

N = 2^nextpow2(L)         # Î¼Î®ÎºÎ¿Ï‚ Î¼ÎµÏ„Î±ÏƒÏ‡Î·Î¼Î±Ï„Î¹ÏƒÎ¼Î¿Ï Fourier.
                          # Î· nextpow2 Î²ÏÎ¯ÏƒÎºÎµÎ¹ Ï„Î· Î´ÏÎ½Î±Î¼Î· Ï„Î¿Ï… 2 Ï€Î¿Ï…
                          # ÎµÎ¯Î½Î±Î¹ Î¼ÎµÎ³Î±Î»ÏÏ„ÎµÏÎ· Î® Î¯ÏƒÎ· Î±Ï€ÏŒ Ï„Î¿ ÏŒÏÎ¹ÏƒÎ¼Î± L
Fo=#ÏƒÏ…Î¼Ï€Î»Î·ÏÏÏƒÏ„Îµ#          # Î±Î½Î¬Î»Ï…ÏƒÎ· ÏƒÏ…Ï‡Î½ÏŒÏ„Î·Ï„Î±Ï‚
f=np.arange(0,N)*Fo       # Î´Î¹Î¬Î½Ï…ÏƒÎ¼Î± ÏƒÏ…Ï‡Î½Î¿Ï„Î®Ï„Ï‰Î½
X=#ÏƒÏ…Î¼Ï€Î»Î·ÏÏÏƒÏ„Îµ#           # Î±ÏÎ¹Î¸Î¼Î·Ï„Î¹ÎºÏŒÏ‚ Ï…Ï€Î¿Î»Î¿Î³Î¹ÏƒÎ¼ÏŒÏ‚ Ï„Î¿Ï… Î´Î¹Î±ÎºÏÎ¹Ï„Î¿Ï Î¼ÎµÏ„Î±ÏƒÏ‡Î·Î¼Î±Ï„Î¹ÏƒÎ¼Î¿Ï Fourier (DFT) Î³Î¹Î± Î ÏƒÎ·Î¼ÎµÎ¯Î±

# Î£Ï‡ÎµÎ´Î¹Î¬ÏƒÏ„Îµ Ï„Î¿ ÏƒÎ®Î¼Î± ÏƒÏ„Î¿ Ï€ÎµÎ´Î¯Î¿ ÏƒÏ…Ï‡Î½ÏŒÏ„Î·Ï„Î±Ï‚

# Î‘Ï†Î¿Ï Ï„Î¿ ÏƒÎ®Î¼Î± ÎµÎ¯Î½Î±Î¹ Ï€ÏÎ±Î³Î¼Î±Ï„Î¹ÎºÏŒ Î¼Ï€Î¿ÏÎµÎ¯Ï„Îµ Î½Î± ÏƒÏ‡ÎµÎ´Î¹Î¬ÏƒÎµÏ„Îµ Î¼ÏŒÎ½Î¿ Ï„Î¹Ï‚ Î¸ÎµÏ„Î¹ÎºÎ­Ï‚ ÏƒÏ…Ï‡Î½ÏŒÏ„Î·Ï„ÎµÏ‚
fig, ax = plt.subplots()
fig.set_size_inches(18.5, 10.5)
ax.plot(f[np.arange(1,N)],abs(X[np.arange(1,N)]))
ax.set(xlabel='f (Hz)', ylabel='Amplitude',
       title='Frequency domain plot of x')
ax.grid()
plt.show()

f=f-Fs/2                           # Î¿Î»Î¯ÏƒÎ¸Î·ÏƒÎ· ÏƒÏ…Ï‡Î½Î¿Ï„Î®Ï„Ï‰Î½ Ï€ÏÎ¿Ï‚ Ï„Î± Î±ÏÎ¹ÏƒÏ„ÎµÏÎ¬ ÎºÎ±Ï„Î¬ â€“Fs/2
X=np.fft.fftshift(X)               # Î¿Î»Î¯ÏƒÎ¸Î·ÏƒÎ· Ï„Î·Ï‚ Î¼Î·Î´ÎµÎ½Î¹ÎºÎ®Ï‚ ÏƒÏ…Ï‡Î½ÏŒÏ„Î·Ï„Î±Ï‚ ÏƒÏ„Î¿ ÎºÎ­Î½Ï„ÏÎ¿ Ï„Î¿Ï… Ï†Î¬ÏƒÎ¼Î±Ï„Î¿Ï‚
fig, ax = plt.subplots()
fig.set_size_inches(18.5, 12)
ax.plot(f,abs(X))
ax.set(xlabel='f (Hz)', ylabel='Amplitude',
       title='Two sided spectrum of x')
ax.grid()
plt.show()

# Î¥Ï€Î¿Î»Î¿Î³Î¯ÏƒÏ„Îµ Ï„Î·Î½ Î¹ÏƒÏ‡Ï

power=np.multiply(X,np.conj(X))/N/L    # Ï…Ï€Î¿Î»Î¿Î³Î¹ÏƒÎ¼ÏŒÏ‚ Ï€Ï…ÎºÎ½ÏŒÏ„Î·Ï„Î±Ï‚ Î¹ÏƒÏ‡ÏÎ¿Ï‚
fig, ax = plt.subplots()
fig.set_size_inches(18.5, 12)
ax.plot(f,power)
ax.set(xlabel='Frequency (Hz)', ylabel='Power',
       title='Periodogram')
ax.grid()
plt.show()
------------------

[0;36m  File [0;32m"<ipython-input-19-5bcbea5b00f1>"[0;36m, line [0;32m3[0m
[0;31m    Ts=#ÏƒÏ…Î¼Ï€Î»Î·ÏÏÏƒÏ„Îµ#           # Ï€ÎµÏÎ¯Î¿Î´Î¿Ï‚ Î´ÎµÎ¹Î³Î¼Î±Ï„Î¿Î»Î·ÏˆÎ¯Î±Ï‚[0m
[0m       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-19-5bcbea5b00f1>, line 3)

